<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:background="@color/body_bg"
              android:orientation="vertical"
              android:padding="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/share_email"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:scaleType="fitXY"
                android:src="@drawable/share_mail"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="2dp"
                android:text="@string/share_by_email"
                android:textColor="@color/grgray"
                android:textSize="@dimen/dp14_textsize"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/share_weixin"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:scaleType="fitXY"
                android:src="@drawable/share_weixin"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="2dp"
                android:text="@string/weixin_friend"
                android:textColor="@color/grgray"
                android:textSize="@dimen/dp14_textsize"
                />
        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/share_pengyouquan"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:scaleType="fitXY"
                android:src="@drawable/share_pengyouquan"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="2dp"
                android:text="@string/weixin_friends"
                android:textColor="@color/grgray"
                android:textSize="@dimen/dp14_textsize"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/share_sina"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:scaleType="fitXY"
                android:src="@drawable/share_sina"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="2dp"
                android:text="@string/sina_weibo"
                android:textColor="@color/grgray"
                android:textSize="@dimen/dp14_textsize"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/share_qq"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:scaleType="fitXY"
                android:src="@drawable/share_qq"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="2dp"
                android:text="@string/qq_friend"
                android:textColor="@color/grgray"
                android:textSize="@dimen/dp14_textsize"/>
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/share_cancle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@color/white_bg"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/cancel"
        android:textColor="@color/black_bg"
        android:textSize="@dimen/dp16_textsize"/>


</LinearLayout>